Fix : /collection/song page align design fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 .scroll-modal {
-  overflow: hidden;
+  overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
